--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -10,19 +10,25 @@ html {
     height: 100%;
 }
 
-body,
+body {
+  font-family: "Josefin Sans", Arial, sans-serif;
+}
+
+nav,
 h1,
 h2,
 h3,
 h4,
 h5,
-h6 {
-    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
+h6,
+footer {
+    /*font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;*/
+    /*font-weight: 700;*/
+    font-family: "Amatic SC",cursive;
 }
 
 .topnav {
-    font-size: 14px;
+    font-size: 30px;
 }
 
 .topnav-heart {
@@ -35,12 +41,19 @@ h6 {
     font-weight: 400;
 }
 
+
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/header1.jpg) no-repeat center center;
+    background:
+      linear-gradient(
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35),
+      rgba(0, 0, 0, 2)
+      ),
+      url(../img/header1.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -65,6 +78,7 @@ h6 {
 
 .intro-message > h3 {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-size: 48px;
 }
 
 @media(max-width:767px) {
@@ -112,6 +126,7 @@ h6 {
 
 .section-heading {
     margin-bottom: 30px;
+    font-size: 48px;
 }
 
 .section-heading-spacer {
@@ -123,7 +138,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/slim-banner2.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -168,10 +183,12 @@ h6 {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 10px 0;
     background-color: #f8f8f8;
+    font-size: 24px;
 }
 
 p.copyright {
     margin: 15px 0 0;
+    font-size: 16px;
 }
